--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.7",
-    "@iconify-json/carbon": "^1.1.18",
+    "@iconify/json": "^2.2.89",
     "@intlify/unplugin-vue-i18n": "^0.12.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
@@ -69,6 +69,7 @@
     "vite-plugin-webfont-dl": "^3.7.6",
     "vite-ssg": "^0.23.0",
     "vite-ssg-sitemap": "^0.5.1",
+    "vite-svg-loader": "^4.0.0",
     "vitest": "^0.32.4",
     "vue-tsc": "^1.8.4"
   },
