--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@unocss/reset": "^0.53.4",
     "@vueuse/core": "^10.2.1",
     "@vueuse/head": "^1.1.26",
+    "aos": "^2.3.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
