--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue": "^3.3.4",
     "vue-demi": "^0.14.5",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue3-lottie": "^3.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.7",
