--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/core": "^10.2.1",
     "@vueuse/head": "^1.1.26",
     "aos": "^2.3.4",
+    "github-calendar": "^2.3.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
