--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "github-calendar": "^2.3.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
+    "swiper": "^11.0.7",
     "vue": "^3.3.4",
     "vue-demi": "^0.14.5",
     "vue-i18n": "^9.2.2",
